# digital

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: posix.yml  windows.yml
data/master/: coverage.xml
include/prox/: digital.hpp
tests/: CMakeLists.txt  coverage.sh  unittests.cpp
tests/cmake/: asan.cmake
